// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Helper #buildNodeProps when node to build is the highlightedLink target (or source) and highlight degree is 0 should properly build node props () 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 11.5,
  "fill": "green",
  "fontColor": "black",
  "fontSize": 8,
  "fontWeight": "normal",
  "highlighted": false,
  "id": "id",
  "label": "id",
  "labelPosition": null,
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": undefined,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "none",
  "strokeWidth": 1.5,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;

exports[`Graph Helper #buildNodeProps when node to build is the highlightedLink target (or source) and highlight degree is bigger then 0 should properly build node props 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 11.5,
  "fill": "green",
  "fontColor": "black",
  "fontSize": 8,
  "fontWeight": "normal",
  "highlighted": false,
  "id": "id",
  "label": "id",
  "labelPosition": null,
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": undefined,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "none",
  "strokeWidth": 1.5,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;

exports[`Graph Helper #buildNodeProps when node to build is the highlightedNode should return node props with proper highlight values 1`] = `
Object {
  "className": "node",
  "color": "green",
  "cursor": "pointer",
  "cx": 1,
  "cy": 2,
  "dx": 15.5,
  "fill": "red",
  "fontColor": "black",
  "fontSize": 12,
  "fontWeight": "bold",
  "highlighted": true,
  "id": "id",
  "label": "id",
  "labelPosition": null,
  "onClickNode": undefined,
  "onMouseOut": undefined,
  "onMouseOverNode": undefined,
  "onRightClickNode": undefined,
  "opacity": 1,
  "overrideGlobalViewGenerator": undefined,
  "renderLabel": true,
  "size": 200,
  "stroke": "yellow",
  "strokeWidth": 2,
  "svg": "file.svg",
  "symbolType": undefined,
  "type": "circle",
  "viewGenerator": null,
  "x": 1,
  "y": 2,
}
`;
